--- a/index.html
+++ b/index.html
@@ -8,7 +8,57 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <h1 class="header">Pair Game</h1>
+    <main class="game">
+        <div class="card" data-img="batman">
+            <img class="front-face" src="./assets/img/batman.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Batman">
+        </div>
+        <div class="card" data-img="batman">
+            <img class="front-face" src="./assets/img/batman.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Batman">
+        </div>
+        <div class="card" data-img="duck">
+            <img class="front-face" src="./assets/img/duck.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of cartoon duck">
+        </div>
+        <div class="card" data-img="duck">
+            <img class="front-face" src="./assets/img/duck.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of cartoon duck">
+        </div>
+        <div class="card" data-img="Niggan">
+            <img class="front-face" src="./assets/img/Niggan.jpg" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Niggan">
+        </div>
+        <div class="card" data-img="Niggan">
+            <img class="front-face" src="./assets/img/Niggan.jpg" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Niggan">
+        </div>
+        <div class="card" data-img="opm">
+            <img class="front-face" src="./assets/img/opm.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of One Punch Man">
+        </div>
+        <div class="card" data-img="opm">
+            <img class="front-face" src="./assets/img/opm.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of One Punch Man">
+        </div>
+        <div class="card" data-img="Ostin-Powers">
+            <img class="front-face" src="./assets/img/Ostin-Powers.jpg" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Austin Powers">
+        </div>
+        <div class="card" data-img="Ostin-Powers">
+            <img class="front-face" src="./assets/img/Ostin-Powers.jpg" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Austin Powers">
+        </div>
+        <div class="card" data-img="spider-man">
+            <img class="front-face" src="./assets/img/spider-man.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
+        </div>
+        <div class="card" data-img="spider-man">
+            <img class="front-face" src="./assets/img/spider-man.png" alt="#">
+            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
+        </div>
+    </main>        
     <script src="./js/index.js"></script>
 </body>
 </html>
