--- a/index.html
+++ b/index.html
@@ -6,59 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pair Game</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="header">Pair Game</h1>
-    <main class="game">
-        <div class="card" data-img="batman">
-            <img class="front-face" src="./assets/img/batman.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Batman">
-        </div>
-        <div class="card" data-img="batman">
-            <img class="front-face" src="./assets/img/batman.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Batman">
-        </div>
-        <div class="card" data-img="duck">
-            <img class="front-face" src="./assets/img/duck.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of cartoon duck">
-        </div>
-        <div class="card" data-img="duck">
-            <img class="front-face" src="./assets/img/duck.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of cartoon duck">
-        </div>
-        <div class="card" data-img="Niggan">
-            <img class="front-face" src="./assets/img/Niggan.jpg" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Niggan">
-        </div>
-        <div class="card" data-img="Niggan">
-            <img class="front-face" src="./assets/img/Niggan.jpg" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Niggan">
-        </div>
-        <div class="card" data-img="opm">
-            <img class="front-face" src="./assets/img/opm.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of One Punch Man">
-        </div>
-        <div class="card" data-img="opm">
-            <img class="front-face" src="./assets/img/opm.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of One Punch Man">
-        </div>
-        <div class="card" data-img="Ostin-Powers">
-            <img class="front-face" src="./assets/img/Ostin-Powers.jpg" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Austin Powers">
-        </div>
-        <div class="card" data-img="Ostin-Powers">
-            <img class="front-face" src="./assets/img/Ostin-Powers.jpg" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Austin Powers">
-        </div>
-        <div class="card" data-img="spider-man">
-            <img class="front-face" src="./assets/img/spider-man.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
-        </div>
-        <div class="card" data-img="spider-man">
-            <img class="front-face" src="./assets/img/spider-man.png" alt="#">
-            <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
-        </div>
-    </main>        
-    <script src="./js/index.js"></script>
+    <div class="app">
+        <h1 class="header">PAIR GAME</h1>
+        <main class="game">
+            <div class="card" data-img="batman">
+                <img class="front-face" src="./assets/img/marcus.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Batman">
+            </div>
+            <div class="card" data-img="batman">
+                <img class="front-face" src="./assets/img/marcus.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Batman">
+            </div>
+            <div class="card" data-img="duck">
+                <img class="front-face" src="./assets/img/renessaince.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of cartoon duck">
+            </div>
+            <div class="card" data-img="duck">
+                <img class="front-face" src="./assets/img/renessaince.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of cartoon duck">
+            </div>
+            <div class="card" data-img="Niggan">
+                <img class="front-face" src="./assets/img/medusa.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Niggan">
+            </div>
+            <div class="card" data-img="Niggan">
+                <img class="front-face" src="./assets/img/medusa.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Niggan">
+            </div>
+            <div class="card" data-img="opm">
+                <img class="front-face" src="./assets/img/zeus.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of One Punch Man">
+            </div>
+            <div class="card" data-img="opm">
+                <img class="front-face" src="./assets/img/zeus.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of One Punch Man">
+            </div>
+            <div class="card" data-img="Ostin-Powers">
+                <img class="front-face" src="./assets/img/athena.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Austin Powers">
+            </div>
+            <div class="card" data-img="Ostin-Powers">
+                <img class="front-face" src="./assets/img/athena.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of Austin Powers">
+            </div>
+            <div class="card" data-img="spider-man">
+                <img class="front-face" src="./assets/img/сaesar.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
+            </div>
+            <div class="card" data-img="spider-man">
+                <img class="front-face" src="./assets/img/сaesar.jpg" alt="#">
+                <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
+            </div>
+        </main>        
+        <script src="./js/index.js"></script>
+    </div>
 </body>
 </html>
