feat: confetti appears after winning the game

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <img class="back-face" src="./assets/img/back-card.jpg" alt="Picture of detective Spider-Man">
             </div>
         </main>        
+        <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
         <script src="./js/index.js"></script>
     </div>
 </body>
